--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.10119175Latihan3">
         <activity
+            android:name=".ui.DoneActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.BioActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.LoginCodeActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.WelcomeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".data.User"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
